# va-petitions

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  docker-compose.yml.j2  pyproject.toml
.github/workflows/: cicd.yml
config/: settings.py  urls.py
pages/: admin.py  models.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_seed_introduction_essay.py  0003_resource_resourcepage.py  0004_seed_resources.py
petitions/: admin.py  lva.py  models.py  resources.py  tests.py  urls.py  views.py
petitions/management/commands/: geocode_counties.py  import_petitions.py
petitions/migrations/: 0001_initial.py  0002_add_kind_and_primary_theme.py  0003_alter_petition_primary_theme.py  0004_decode_description_html_entities.py
templates/: base.html
templates/pages/: about.html  home.html  introduction.html  resources.html  teaching.html
templates/partials/: page_hero.html
templates/petitions/: catalog.html  catalogue.html  county_detail.html  county_list.html  map.html  petition_detail.html  petition_list.html  search.html
theme/static_src/src/: styles.css
